<resources>
    <string name="app_name">Baetube</string>
    <string name="menu_toolbar_notification">알림</string>
    <string name="menu_toolbar_search">검색</string>
    <string name="menu_toolbar_profile">프로필</string>
    <string name="menu_toolbar_next">다음</string>
    <string name="menu_toolbar_report">채널 신고</string>
    <string name="menu_toolbar_customer_service">고객센터</string>
    <string name="menu_toolbar_remove_playlist">재생목록 삭제</string>
    <string name="fragment_login_toolbar_title">로그인</string>
    <string name="fragment_sign_in_toolbar_title">회원가입</string>
    <string name="fragment_subscribe_detail_toolbar_title">채널 목록</string>
    <string name="fragment_playlist_modify_toolbar_title">재생목록 수정</string>
    <string name="fragment_upload_video_list_toolbar_title">업로드</string>
    <string name="fragment_upload_video_information_toolbar_title">세부정보 추가</string>
    <string name="fragment_upload_community_toolbar_title">업로드</string>
    <string name="fragment_set_description_toolbar_title">설명추가</string>
    <string name="fragment_set_public_toolbar_title">공개상태설정</string>
    <string name="fragment_set_age_toolbar_title">시청자층 선택</string>
    <string name="fragment_set_vote_toolbar_title">투표추가</string>
    <string name="fragment_customer_service_toolbar_title">고객센터</string>
    <string name="fragment_modify_user_toolbar_title">유저 </string>
    <string name="bottom_navigation_home">홈</string>
    <string name="bottom_navigation_upload">업로드</string>
    <string name="bottom_navigation_subscribe">구독</string>
    <string name="bottom_navigation_storage">보관함</string>
    <string name="subscribe_count_prefix">구독자</string>
    <string name="subscribe_count_suffix">명</string>
    <string name="video_count_prefix">동영상</string>
    <string name="video_count_suffix">개</string>
    <string name="home_category">카테고리</string>
    <string name="home_drawer_login">로그인</string>
    <string name="home_drawer_channel_manage">채널 관리</string>
    <string name="home_drawer_account_manage">계정 관리</string>
    <string name="home_drawer_my_channel">내 채널</string>
    <string name="home_drawer_logout">로그아웃</string>
    <string name="home_drawer_back">뒤로가기</string>
    <string name="subscribe_detail">전체</string>
    <string name="storage_history">기록</string>
    <string name="storage_history_all">모두 보기</string>
    <string name="storage_playlist">재생목록</string>
    <string name="login_email">이메일</string>
    <string name="login_email_hint">가입 시 작성한 이메일을 입력해주세요.</string>
    <string name="login_password">패스워드</string>
    <string name="login_password_hint">가입 시 작성한 패스워드를 입력해주세요.</string>
    <string name="login_button_text">로그인</string>
    <string name="login_sign_in_button_text">회원가입</string>
    <string name="sign_in_email">이메일</string>
    <string name="sign_in_email_hint">가입할 이메일을 입력해주세요.</string>
    <string name="sign_in_password">패스워드</string>
    <string name="sign_in_password_hint">가입할 패스워드를 입력해주세요.</string>
    <string name="sign_in_password_check">패스워드 확인</string>
    <string name="sign_in_password_check_hint">패스워드를 한번 더 입력해주세요.</string>
    <string name="sign_in_name">이름</string>
    <string name="sign_in_name_hint">이름을 입력해주세요.</string>
    <string name="sign_in_birth">생년월일</string>
    <string name="sign_in_birth_year">년</string>
    <string name="sign_in_birth_year_hint">2022</string>
    <string name="sign_in_birth_month">월</string>
    <string name="sign_in_birth_month_hint">01</string>
    <string name="sign_in_birth_day">일</string>
    <string name="sign_in_birth_day_hint">15</string>
    <string name="sign_in_gender">성별</string>
    <string name="sign_in_gender_male">남성</string>
    <string name="sign_in_gender_female">여성</string>
    <string name="sign_in_address">주소</string>
    <string name="sign_in_address_hint">클릭하여 주소를 검색하세요.</string>
    <string name="sign_in_phone">전화번호</string>
    <string name="sign_in_phone_hint">전화번호를 - 없이 입력해주세요.</string>
    <string name="sign_in_button_text">회원가입</string>
    <string name="modify_user_email">이메일</string>
    <string name="modify_user_password">기존 패스워드</string>
    <string name="modify_user_password_hint">사용중이던 패스워드를 입력해주세요.</string>
    <string name="modify_user_password_check">변경할 패스워드</string>
    <string name="modify_user_password_check_hint">변경할 패스워드를 입력해주세요.</string>
    <string name="modify_user_name">이름</string>
    <string name="modify_user_birth">생년월일</string>
    <string name="modify_user_birth_year">년</string>
    <string name="modify_user_birth_year_hint">2022</string>
    <string name="modify_user_birth_month">월</string>
    <string name="modify_user_birth_month_hint">01</string>
    <string name="modify_user_birth_day">일</string>
    <string name="modify_user_birth_day_hint">15</string>
    <string name="modify_user_gender">성별</string>
    <string name="modify_user_gender_male">남성</string>
    <string name="modify_user_gender_female">여성</string>
    <string name="modify_user_address">주소</string>
    <string name="modify_user_address_hint">클릭하여 주소를 검색하세요.</string>
    <string name="modify_user_phone">전화번호</string>
    <string name="modify_user_phone_hint">전화번호를 - 없이 입력해주세요.</string>
    <string name="modify_user_button_text">수정</string>
    <string name="modify_user_button_text_change_password">비밀번호 변경</string>
    <string name="unsubscribe">구독 취소</string>
    <string name="subscribe_filter_latest">최신순</string>
    <string name="subscribe_filter_alphabet">가나다순</string>
    <string name="subscribe_manage">관리</string>
    <string name="subscribe_back">뒤로</string>
    <string name="subscribe_delete">일괄삭제</string>
    <string name="playlist_detail_text_button_play">재생</string>
    <string name="playlist_detail_text_button_shuffle">셔플</string>
    <string name="playlist_detail_text_video">동영상</string>
    <string name="playlist_modify_text_title">제목</string>
    <string name="playlist_modify_text_hint_description">설명</string>
    <string name="playlist_modify_text_visible">개인정보 보호</string>
    <string name="channel_home_upload_video_title">업로드한 동영상</string>
    <string name="channel_information_text_description">설명</string>
    <string name="channel_information_text_link">링크</string>
    <string name="channel_information_text_additional">추가 정보</string>
    <string name="channel_information_text_sign_in_date">가입일 : </string>
    <string name="channel_information_text_view_count">조회수 : </string>
    <string name="text_title_count_max">100</string>
    <string name="text_description_count_max">1000</string>
    <string name="text_vote_count_max">5</string>
    <string name="text_count_divider"> / </string>
    <string name="modify_video_text_description">설명</string>
    <string name="modify_video_text_visible">공개 상태</string>
    <string name="modify_video_text_age">시청자층</string>
    <string name="modify_video_text_location">위치</string>
    <string name="modify_video_text_add_playlist">재생목록 추가</string>
    <string name="modify_community_text_description">설명 추가</string>
    <string name="modify_community_text_vote">투표 추가</string>
    <string name="modify_playlist_text_description">설명 추가</string>
    <string name="modify_channel_information_text_description">설명</string>
    <string name="modify_channel_information_text_link">링크</string>
    <string name="analysis_text_view">조회수</string>
    <string name="analysis_text_time">시청 시간</string>
    <string name="analysis_text_subscribe">구독자 수</string>
    <string name="upload_video_text_description">설명</string>
    <string name="upload_video_text_visible">공개 상태</string>
    <string name="upload_video_text_location">위치</string>
    <string name="upload_video_text_add_category">카테고리</string>
    <string name="upload_video_text_add_playlist">재생목록 추가</string>
    <string name="upload_video_text_title">제목</string>
    <string name="upload_video_text_hint_title">제목을 입력하세요.</string>
    <string name="set_visible_text_title">지금 게시</string>
    <string name="visible_text_public">공개</string>
    <string name="visible_text_public_description">모든 사용자가 검색하고 볼 수 있음</string>
    <string name="visible_text_link">일부 공개</string>
    <string name="visible_text_link_description">링크가 있는 사용자만 볼 수 있음</string>
    <string name="visible_text_lock">비공개</string>
    <string name="visible_text_lock_description">나만 볼 수 있음</string>
    <string name="set_age_text_child_title">아동용 동영상인가요?</string>
    <string name="set_age_text_child_description">모든 크리에이터는 위치에 상관없이 아동 온라인 개인정보 보호법(COPPA) 및 기타 법률을 준수해야 할
        법적인 의무가 있습니다. 아동용 동영상인지 여부는 크리에이터가 지정해야 합니다.</string>
    <string name="set_age_text_radio_button_child">예, 아동용입니다.</string>
    <string name="set_age_text_radio_button_not_child">아동용 동영상이 아닙니다.</string>
    <string name="set_age_text_button_adult">연령 제한(고급)</string>
    <string name="set_age_text_adult_description">동영상을 성인만 시청할 수 있도록 제한하고 싶으신가요?</string>
    <string name="set_age_text_adult_description_warn">연령 제한 동영상은 BaeTube의 특정 영역에 표시되지 않습니다.
    이러한 동영상은 광고 수익 창출이 제한되거나 배제될 수 있습니다.</string>
    <string name="set_age_text_radio_button_not_adult">아니요, 동영상 시청자를 만 18세 이상으로 제한하지 않습니다.</string>
    <string name="set_age_text_radio_button_adult">예, 동영상 시정차를 만 18세 이상으로 제한하겠습니다.</string>
    <string name="set_age_text_button_upload">동영상 업로드</string>
    <string name="upload_community_text_description">설명 추가</string>
    <string name="upload_community_text_vote">투표 추가</string>
    <string name="upload_community_text_button_upload">게시글 업로드</string>
    <string name="set_vote_text_button_add_vote">투표 추가하기</string>
    <string name="bottomsheetdialogfragment_video_text_view">조회수</string>
    <string name="bottomsheetdialogfragment_video_text_add_playlist">저장</string>
    <string name="bottomsheetdialogfragment_video_text_subscribe">구독</string>
    <string name="bottomsheetdialogfragment_video_text_subscribe_count">구독자</string>
    <string name="bottomsheetdialogfragment_video_text_reply">댓글</string>
    <string name="bottomsheetdialogfragment_video_hint_reply">댓글을 입력하세요.</string>
    <string name="bottomsheetdialogfragment_reply_text_reply">댓글</string>
    <string name="bottomsheetdialogfragment_reply_text_nested_reply">답글</string>
    <string name="bottomsheetdialogfragment_reply_hint">댓글 추가...</string>
    <string name="bottomsheetdialogfragment_nested_reply_hint">답글 추가...</string>
    <string name="bottomsheetdialogfragment_description_text_description_title">설명</string>
    <string name="bottomsheetdialogfragment_description_text_description_like_count">좋아요 수</string>
    <string name="bottomsheetdialogfragment_description_text_description_view_count">조회수</string>
    <string name="add_new_playlist_text">새 재생목록</string>
    <string name="default_notification_channel_id">baetube</string>
    <string name="appbar_scroll_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="res_ratio_full">1.33</string>
    <string name="res_ratio_wide">1.77</string>
    <string name="res_ratio_ultra_wide">2.33</string>
    <string name="res_ratio_channel_art">3.65</string>
    <string name="res_ratio_collapsed">4.00</string>
    <string name="res_ratio_min">5.00</string>
    <string name="notification_date_today">오늘</string>
    <string name="notification_date_week">이번 주</string>
    <string name="notification_date_other">이전 페이지</string>
    <string name="notification_text_video">에서 업로드한 동영상 : </string>
    <string name="notification_text_communication">에서 업로드한 게시글 : </string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="subscribe_text">구독</string>
    <string name="subscribed_text">구독 중</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="add_vote_text_title">투표 추가</string>
    <string name="add_vote_text_hint">투표 내용을 입력해주세요.</string>
    <string name="add_vote_text_button_add">추가</string>
    <string name="add_vote_text_button_close">취소</string>
</resources>