<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_sign_in_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scroll_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/input_border"
                android:padding="@dimen/padding_medium"
                android:layout_margin="@dimen/margin_medium">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_email"
                    style="@style/textview_style_normal"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_size_large"/>

                <EditText
                    android:id="@+id/fragment_sign_in_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_email_hint"
                    android:background="@drawable/input_border"
                    style="@style/textview_style_normal"
                    android:padding="@dimen/padding_small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_password"
                    style="@style/textview_style_normal"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_size_large"/>

                <EditText
                    android:id="@+id/fragment_sign_in_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_password_hint"
                    android:background="@drawable/input_border"
                    style="@style/textview_style_normal"
                    android:padding="@dimen/padding_small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_password_check"
                    style="@style/textview_style_normal"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_size_large"/>

                <EditText
                    android:id="@+id/fragment_sign_in_edit_password_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_password_check_hint"
                    android:background="@drawable/input_border"
                    style="@style/textview_style_normal"
                    android:padding="@dimen/padding_small"
                    android:layout_marginBottom="@dimen/margin_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/input_border"
                android:padding="@dimen/padding_medium"
                android:layout_margin="@dimen/margin_medium">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_name"
                    style="@style/textview_style_normal"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_size_large"/>

                <EditText
                    android:id="@+id/fragment_sign_in_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_name_hint"
                    android:background="@drawable/input_border"
                    style="@style/textview_style_normal"
                    android:padding="@dimen/padding_small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_birth"
                    style="@style/textview_style_normal"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_size_large"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/fragment_sign_in_edit_birth_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_border"
                        android:hint="@string/sign_in_birth_year_hint"
                        style="@style/textview_style_normal"
                        android:padding="@dimen/padding_small"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_birth_year"
                        android:layout_gravity="center"
                        style="@style/textview_style_normal"
                        android:paddingLeft="0dp"/>

                    <EditText
                        android:id="@+id/fragment_sign_in_edit_birth_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_border"
                        android:hint="@string/sign_in_birth_month_hint"
                        style="@style/textview_style_normal"
                        android:padding="@dimen/padding_small"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_birth_month"
                        android:layout_gravity="center"
                        style="@style/textview_style_normal"
                        android:paddingLeft="0dp"/>

                    <EditText
                        android:id="@+id/fragment_sign_in_edit_birth_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_border"
                        android:hint="@string/sign_in_birth_day_hint"
                        style="@style/textview_style_normal"
                        android:padding="@dimen/padding_small"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_birth_day"
                        android:layout_gravity="center"
                        style="@style/textview_style_normal"
                        android:paddingLeft="0dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_birth"
                    style="@style/textview_style_normal"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_size_large"/>

                <RadioGroup
                    android:id="@+id/fragment_sign_in_radio_group_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_medium">

                    <RadioButton
                        android:id="@+id/fragment_sign_in_radio_gender_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_gender_male"
                        android:paddingVertical="@dimen/padding_small"
                        android:paddingHorizontal="@dimen/padding_large"
                        android:layout_marginRight="@dimen/margin_large"
                        android:button="@null"
                        android:background="@drawable/radio_button_background"/>

                    <RadioButton
                        android:id="@+id/fragment_sign_in_radio_gender_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_gender_female"
                        android:paddingVertical="@dimen/padding_small"
                        android:paddingHorizontal="@dimen/padding_large"
                        android:button="@null"
                        android:background="@drawable/radio_button_background"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/input_border"
                android:padding="@dimen/padding_medium"
                android:layout_margin="@dimen/margin_medium">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_address"
                    style="@style/textview_style_normal"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_size_large"/>

                <EditText
                    android:id="@+id/fragment_sign_in_edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_address_hint"
                    android:background="@drawable/input_border"
                    style="@style/textview_style_normal"
                    android:padding="@dimen/padding_small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_phone"
                    style="@style/textview_style_normal"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:textSize="@dimen/text_size_large"/>

                <EditText
                    android:id="@+id/fragment_sign_in_edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_phone_hint"
                    android:background="@drawable/input_border"
                    style="@style/textview_style_normal"
                    android:padding="@dimen/padding_small"
                    android:layout_marginBottom="@dimen/margin_medium"/>

            </LinearLayout>

            <Button
                android:id="@+id/fragment_sign_in_button_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in_button_text"
                android:layout_margin="@dimen/margin_medium"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:backgroundTint="@color/clickable_text_color"/>

        </LinearLayout>

    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>