<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.set.SetAgeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_set_age_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <include
            layout="@layout/toolbar_no_scroll"
            android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_age_text_child_title"
                android:layout_marginBottom="@dimen/margin_small"
                style="@style/textview_style_set_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_age_text_child_description"
                android:layout_marginBottom="@dimen/margin_medium"
                style="@style/textview_style_set_description"/>

            <RadioGroup
                android:id="@+id/fragment_set_age_radio_group_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium">

                <RadioButton
                    android:id="@+id/fragment_set_age_radio_button_child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/set_age_text_radio_button_child"
                    style="@style/textview_style_set_title"/>

                <RadioButton
                    android:id="@+id/fragment_set_age_radio_button_not_child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/set_age_text_radio_button_not_child"
                    style="@style/textview_style_set_title"/>

            </RadioGroup>

            <TextView
                android:id="@+id/fragment_set_age_text_button_adult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_age_text_button_adult"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:layout_marginBottom="@dimen/margin_medium"
                style="@style/textview_style_clickable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_age_text_adult_description"
                android:layout_marginBottom="@dimen/margin_small"
                style="@style/textview_style_set_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_age_text_adult_description_warn"
                android:layout_marginBottom="@dimen/margin_medium"
                style="@style/textview_style_set_description"/>

            <RadioGroup
                android:id="@+id/fragment_set_age_radio_group_adult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium">

                <RadioButton
                    android:id="@+id/fragment_set_age_radio_button_not_adult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/set_age_text_radio_button_not_adult"
                    style="@style/textview_style_set_title"/>

                <RadioButton
                    android:id="@+id/fragment_set_age_radio_button_adult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/set_age_text_radio_button_adult"
                    style="@style/textview_style_set_title"/>

            </RadioGroup>

            <TextView
                android:id="@+id/fragment_set_age_text_button_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_age_text_button_upload"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                style="@style/textview_style_clickable"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>