<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".bottomsheetdialog.AddVoteFragment">

    <TextView
        android:id="@+id/fragment_add_vote_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_medium"
        android:text="@string/add_vote_text_title"
        style="@style/textview_style_option_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/fragment_add_vote_edit_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/add_vote_text_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_vote_text_title"/>

    <TextView
        android:id="@+id/fragment_add_vote_text_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:text="@string/add_vote_text_button_add"
        style="@style/textview_style_vote_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_vote_edit_comment"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/fragment_add_vote_text_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:text="@string/add_vote_text_button_close"
        style="@style/textview_style_vote_button"
        app:layout_constraintEnd_toStartOf="@+id/fragment_add_vote_text_button_add"
        app:layout_constraintTop_toTopOf="@+id/fragment_add_vote_text_button_add"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_add_vote_text_button_add"/>


</androidx.constraintlayout.widget.ConstraintLayout>